#89754: [FEATURE] Added endpoint for uploading file to voucher
